@@ -1,399 +1,501 @@
 /*
- * TuCSoN coordination infrastructure - Copyright (C) 2001-2002  aliCE team at deis.unibo.it
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ * TuCSoN coordination infrastructure - Copyright (C) 2001-2002 aliCE team at
+ * deis.unibo.it This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation; either version 2.1 of the License,
+ * or (at your option) any later version. This library is distributed in the
+ * hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
+ * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
+ * the GNU Lesser General Public License for more details. You should have
+ * received a copy of the GNU Lesser General Public License along with this
+ * library; if not, write to the Free Software Foundation, Inc., 59 Temple
+ * Place, Suite 330, Boston, MA 02111-1307 USA
  */
 package alice.tucson.service;
 
-import alice.logictuple.*;
+import java.util.HashMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
 
+import alice.logictuple.LogicTuple;
 import alice.tucson.api.TucsonAgentId;
 import alice.tucson.api.TucsonTupleCentreId;
 import alice.tucson.api.exceptions.TucsonInvalidAgentIdException;
+import alice.tucson.api.exceptions.TucsonInvalidLogicTupleException;
+import alice.tucson.api.exceptions.TucsonInvalidSpecificationException;
 import alice.tucson.api.exceptions.TucsonInvalidTupleCentreIdException;
-
-import alice.tucson.network.*;
-import alice.tucson.service.TucsonNodeService;
-
+import alice.tucson.api.exceptions.TucsonOperationNotPossibleException;
+import alice.tucson.network.AbstractTucsonProtocol;
+import alice.tucson.network.TucsonMsgReply;
+import alice.tucson.network.TucsonMsgRequest;
+import alice.tucson.network.exceptions.DialogException;
 import alice.tuplecentre.api.ITupleCentreOperation;
 import alice.tuplecentre.api.Tuple;
-import alice.tuplecentre.core.TupleCentreOperation;
-
-import java.io.*;
-import java.util.*;
+import alice.tuplecentre.core.AbstractTupleCentreOperation;
 
 /**
  * 
+ * @author ste (mailto: s.mariani@unibo.it) on 16/lug/2013
+ * 
  */
-public class ACCProxyNodeSide extends ACCAbstractProxyNodeSide{
-	
-	private boolean exit = false;
-	private TucsonAgentId agentId;
-	private TucsonTupleCentreId tcId;
-	TucsonProtocol dialog;
-	ObjectInputStream inStream;
-	ObjectOutputStream outStream;
-	TucsonNodeService node;
-	HashMap<Long, TucsonMsgRequest> requests;
-	HashMap<Long, Long> opVsReq;
-	ACCProvider manager;
-	int ctxId;
+public class ACCProxyNodeSide extends AbstractACCProxyNodeSide {
 
-	/**
-	 * 
-	 * @param man
-	 * @param dialog
-	 * @param node
-	 * @param p
-	 */
-	public ACCProxyNodeSide(ACCProvider man, TucsonProtocol dialog, TucsonNodeService node, ACCDescription p){
+    private TucsonAgentId agentId;
+    private final int ctxId;
+    private final AbstractTucsonProtocol dialog;
+    private boolean ex = false;
+    private final ACCProvider manager;
+    private final TucsonNodeService node;
+    private final Map<Long, Long> opVsReq;
+    private final Map<Long, TucsonMsgRequest> requests;
+    private TucsonTupleCentreId tcId;
 
-		ctxId = Integer.parseInt(p.getProperty("context-id"));
+    /**
+     * 
+     * @param man
+     *            the ACC provider who created this ACC Proxy at TuCSoN node
+     *            side
+     * @param d
+     *            the network protocol used by this ACC Proxy at TuCSoN node
+     *            side
+     * @param n
+     *            the TuCSoN node this ACC Proxy at TuCSoN node side belongs to
+     * @param p
+     *            the object describing the request of entering the TuCSoN
+     *            system
+     */
+    public ACCProxyNodeSide(final ACCProvider man,
+            final AbstractTucsonProtocol d, final TucsonNodeService n,
+            final ACCDescription p) {
 
-		String name = p.getProperty("agent-identity");
-		if(name == null){
-			name = p.getProperty("tc-identity");
-			try {
-				tcId = new TucsonTupleCentreId(name);
-				agentId = new TucsonAgentId("tcAgent", tcId);
-			} catch (TucsonInvalidTupleCentreIdException e) {
-				System.err.println("[ACCProxyNodeSide]: " + e);
-				e.printStackTrace();
-//			} catch (TucsonInvalidAgentIdException e) {
-//				System.err.println("[ACCProxyNodeSide]: " + e);
-//				e.printStackTrace();
-			}
-		}else{
-			try{
-				agentId = new TucsonAgentId(name);
-			}catch(TucsonInvalidAgentIdException e){
-				System.err.println("[ACCProxyNodeSide]: " + e);
-				e.printStackTrace();
-			}
-		}
+        super();
+        this.ctxId = Integer.parseInt(p.getProperty("context-id"));
 
-		this.dialog = dialog;
-		inStream = dialog.getInputStream();
-		outStream = dialog.getOutputStream();
+        String name = p.getProperty("agent-identity");
+        if (name == null) {
+            name = p.getProperty("tc-identity");
+            try {
+                this.tcId = new TucsonTupleCentreId(name);
+                this.agentId = new TucsonAgentId("tcAgent", this.tcId);
+            } catch (final TucsonInvalidTupleCentreIdException e) {
+                e.printStackTrace();
+            }
+        } else {
+            try {
+                this.agentId = new TucsonAgentId(name);
+            } catch (final TucsonInvalidAgentIdException e) {
+                e.printStackTrace();
+            }
+        }
 
-		requests = new HashMap<Long, TucsonMsgRequest>();
-		opVsReq = new HashMap<Long, Long>();
+        this.dialog = d;
 
-		this.node = node;
-		manager = man;
-		
-	}
+        this.requests = new HashMap<Long, TucsonMsgRequest>();
+        this.opVsReq = new HashMap<Long, Long>();
 
-	private void log(String st){
-		System.out.println("[ACCProxyNodeSide (" + node.getTCPPort() + ", " + ctxId + ")]: " + st);
-	}
+        this.node = n;
+        this.manager = man;
 
-	/**
-	 * 
-	 */
-	@SuppressWarnings({ "unchecked", "finally" })
-	public void run(){
-		
-		node.addAgent(agentId);
-		
-		TucsonMsgRequest msg;
-		TucsonMsgReply reply;
-		TucsonTupleCentreId tid;
-		LogicTuple res = null;
-		List<LogicTuple> resList;
+    }
 
-		while(!exit){
-			
-			log("Listening to incoming TuCSoN agents/nodes requests...");
+    @Override
+    public synchronized void exit() {
+        this.ex = true;
+        this.notify();
+    }
 
-			try{
-				msg = TucsonMsgRequest.read(inStream);
-			}catch(EOFException e){
-				log("Agent " + agentId + " quitted");
-				break;
-			}catch(Exception e){
-				System.err.println("[ACCProxyNodeSide]: " + e);
-				e.printStackTrace();
-				break;
-			}
-			int msg_type = msg.getType();				
-			
-			if(msg_type == TucsonOperation.exitCode()){
-				reply = new TucsonMsgReply(msg.getId(), TucsonOperation.exitCode(), true, true, true);
-				try{
-					TucsonMsgReply.write(outStream, reply);
-					outStream.flush();
-				}catch(IOException e){
-					System.err.println("[ACCProxyNodeSide]: " + e);
-					e.printStackTrace();
-				}finally{
-					break;
-				}
-			}
-			
-			try{
-				tid = new TucsonTupleCentreId((Object) msg.getTid());  
-			}catch(TucsonInvalidTupleCentreIdException e){
-				System.err.println("[ACCProxyNodeSide]: " + e);
-				e.printStackTrace();
-				break;
-			}
-			
-			log("Serving TucsonOperation request < id="+msg.getId()+", type="+msg.getType()+", tuple="+msg.getTuple()+" >...");
-			
-			if(msg_type == TucsonOperation.set_sCode()){
-				node.resolveCore(tid.getName());
-				node.addTCAgent(agentId, tid);
-				try{
-					if(tcId == null)
-						resList = (List<LogicTuple>) TupleCentreContainer.doBlockingSpecOperation(msg_type, agentId, tid, msg.getTuple());
-					else
-						resList = (List<LogicTuple>) TupleCentreContainer.doBlockingSpecOperation(msg_type, tcId, tid, msg.getTuple());
-//					log("resList = " + resList);
-				}catch(Exception e){
-					System.err.println("[ACCProxyNodeSide]: " + e);
-					e.printStackTrace();
-					break;
-				}
-				
-				reply = new TucsonMsgReply(msg.getId(), msg_type, true, true, true, msg.getTuple(), resList);
-				
-				try{
-					TucsonMsgReply.write(outStream, reply);
-					outStream.flush();
-				}catch(IOException e){
-					System.err.println("[ACCProxyNodeSide]: " + e);
-					e.printStackTrace();
-					break;
-				}
-				
-			}else if(msg_type == TucsonOperation.set_Code()){
-				
-				node.resolveCore(tid.getName());
-				node.addTCAgent(agentId, tid);
-				try{
-//					log("msg.getTuple = " + msg.getTuple());
-					if(tcId == null)
-						resList = (List<LogicTuple>) TupleCentreContainer.doBlockingOperation(msg_type, agentId, tid, msg.getTuple());
-					else
-						resList = (List<LogicTuple>) TupleCentreContainer.doBlockingOperation(msg_type, tcId, tid, msg.getTuple());
-				}catch(Exception e){
-					System.err.println("[ACCProxyNodeSide]: " + e);
-					e.printStackTrace();
-					break;
-				}
-				
-				reply = new TucsonMsgReply(msg.getId(), msg_type, true, true, true, res, resList);
-				
-				try{
-					TucsonMsgReply.write(outStream, reply);
-					outStream.flush();
-				}catch(IOException e){
-					System.err.println("[ACCProxyNodeSide]: " + e);
-					e.printStackTrace();
-					break;
-				}
-				
-			}else if(msg_type == TucsonOperation.get_Code()){
-				
-				node.resolveCore(tid.getName());
-				node.addTCAgent(agentId, tid);
-				try{
-					if(tcId == null)
-						resList = (List<LogicTuple>) TupleCentreContainer.doBlockingOperation(msg_type, agentId, tid, null);
-					else
-						resList = (List<LogicTuple>) TupleCentreContainer.doBlockingOperation(msg_type, tcId, tid, null);
-				}catch(Exception e){
-					System.err.println("[ACCProxyNodeSide]: " + e);
-					e.printStackTrace();
-					break;
-				}
-				
-				reply = new TucsonMsgReply(msg.getId(), msg_type, true, true, true, null, resList);
-				
-				try{
-					TucsonMsgReply.write(outStream, reply);
-					outStream.flush();
-				}catch(IOException e){
-					System.err.println("[ACCProxyNodeSide]: " + e);
-					e.printStackTrace();
-					break;
-				}
-				
-			}else if(msg_type == TucsonOperation.get_sCode()){
-				
-				node.resolveCore(tid.getName());
-				node.addTCAgent(agentId, tid);
-				try{
-					if(tcId == null)
-						resList = (List<LogicTuple>) TupleCentreContainer.doBlockingSpecOperation(msg_type, agentId, tid, null);
-					else
-						resList = (List<LogicTuple>) TupleCentreContainer.doBlockingSpecOperation(msg_type, tcId, tid, null);
-					if(resList==null)
-						resList = new LinkedList<LogicTuple>();
-//					log("res = " + res);
-				}catch(Exception e){
-					System.err.println("[ACCProxyNodeSide]: " + e);
-					e.printStackTrace();
-					break;
-				}
-				
-				reply = new TucsonMsgReply(msg.getId(), msg_type, true, true, true, null, resList);
-				
-				try{
-					TucsonMsgReply.write(outStream, reply);
-					outStream.flush();
-				}catch(IOException e){
-					System.err.println("[ACCProxyNodeSide]: " + e);
-					e.printStackTrace();
-					break;
-				}
-							
-			}else if(msg_type == TucsonOperation.noCode() || msg_type == TucsonOperation.nopCode()
-					|| msg_type == TucsonOperation.outCode() || msg_type == TucsonOperation.out_allCode()
-					|| msg_type == TucsonOperation.inCode() || msg_type == TucsonOperation.inpCode()
-					|| msg_type == TucsonOperation.rdCode() || msg_type == TucsonOperation.rdpCode()
-					|| msg_type == TucsonOperation.uinCode() || msg_type == TucsonOperation.uinpCode()
-					|| msg_type == TucsonOperation.urdCode() || msg_type == TucsonOperation.urdpCode()
-					|| msg_type == TucsonOperation.unoCode() || msg_type == TucsonOperation.unopCode()
-					|| msg_type == TucsonOperation.in_allCode() || msg_type == TucsonOperation.rd_allCode()
-					|| msg_type == TucsonOperation.no_allCode() || msg_type == TucsonOperation.spawnCode()){
+    /**
+     * @param op
+     *            the operation just completed
+     */
+    public void operationCompleted(final AbstractTupleCentreOperation op) {
 
-				node.resolveCore(tid.getName());
-				node.addTCAgent(agentId, tid);
-				ITupleCentreOperation op;
-				
-				synchronized(requests){
-					try{
-//						log("doing op " + msg.getType() + ", " + msg.getTuple() + ", " + msg.getTid());
-						if(tcId == null)
-							op = TupleCentreContainer.doNonBlockingOperation(msg_type, agentId, tid, msg.getTuple(), this);
-						else
-							op = TupleCentreContainer.doNonBlockingOperation(msg_type, tcId, tid, msg.getTuple(), this);
-					}catch(Exception e){
-						System.err.println("[ACCProxyNodeSide]: " + e);
-						e.printStackTrace();
-						break;
-					}
-					requests.put(new Long(msg.getId()), msg);
-					opVsReq.put(new Long(op.getId()), new Long(msg.getId()));
-				}
-				
-			}else if(msg_type == TucsonOperation.no_sCode() || msg_type == TucsonOperation.nop_sCode()
-					|| msg_type == TucsonOperation.out_sCode()
-					|| msg_type == TucsonOperation.in_sCode() || msg_type == TucsonOperation.inp_sCode()
-					|| msg_type == TucsonOperation.rd_sCode() || msg_type == TucsonOperation.rdp_sCode()){
-				
-				node.resolveCore(tid.getName());
-				node.addTCAgent(agentId, tid);
-				ITupleCentreOperation op;
-				
-				synchronized(requests){
-					try{
-						if(tcId == null)
-							op = TupleCentreContainer.doNonBlockingSpecOperation(msg_type, agentId, tid, msg.getTuple(), this);
-						else
-							op = TupleCentreContainer.doNonBlockingSpecOperation(msg_type, tcId, tid, msg.getTuple(), this);
-					}catch(Exception e){
-						System.err.println("[ACCProxyNodeSide]: " + e);
-						e.printStackTrace();
-						break;
-					}
-					requests.put(new Long(msg.getId()), msg);
-					opVsReq.put(new Long(op.getId()), new Long(msg.getId()));
-				}
-				
-			}else if(msg_type == TucsonOperation.getEnvCode() || msg_type == TucsonOperation.setEnvCode()){
+        Long reqId;
+        TucsonMsgRequest msg;
+        synchronized (this.requests) {
+            reqId = this.opVsReq.remove(Long.valueOf(op.getId()));
+            msg = this.requests.remove(reqId);
+        }
 
-				node.resolveCore(tid.getName());
-				node.addTCAgent(agentId, tid);
-				
-				ITupleCentreOperation op = null;
-				synchronized(requests){
-					try{
-						if(tcId == null)
-							op = TupleCentreContainer.doEnvironmentalOperation(msg_type, agentId, tid, msg.getTuple(), this);
-						else
-							op = TupleCentreContainer.doEnvironmentalOperation(msg_type, tcId, tid, msg.getTuple(), this);
-					}catch(Exception e){
-						System.err.println("[ACCProxyNodeSide]: " + e);
-						e.printStackTrace();
-						break;
-					}
-				}
-				requests.put(new Long(msg.getId()), msg);
-				opVsReq.put(new Long(op.getId()), new Long(msg.getId()));
-			}
-			
-		}
+        TucsonMsgReply reply = null;
 
-		try{
-			dialog.end();
-		}catch(Exception ex){
-			System.err.println("[ACCProxyNodeSide]: " + ex);
-			ex.printStackTrace();
-		}
+        if (op.isInAll() || op.isRdAll() || op.isNoAll() || op.isOutAll()) {
+            if (op.getTupleListResult() == null) {
+                op.setTupleListResult(new LinkedList<Tuple>());
+            }
+            if (op.isResultSuccess()) {
+                reply =
+                        new TucsonMsgReply(msg.getId(), op.getType(), true,
+                                true, true, msg.getTuple(),
+                                op.getTupleListResult());
+            } else {
+                reply =
+                        new TucsonMsgReply(msg.getId(), op.getType(), true,
+                                true, false, msg.getTuple(),
+                                op.getTupleListResult());
+            }
+        } else {
+            if (op.isResultSuccess()) {
+                reply =
+                        new TucsonMsgReply(msg.getId(), op.getType(), true,
+                                true, true, msg.getTuple(), op.getTupleResult());
+            } else {
+                reply =
+                        new TucsonMsgReply(msg.getId(), op.getType(), true,
+                                true, false, msg.getTuple(),
+                                op.getTupleResult());
+            }
+        }
 
-		log("Releasing ACC < " + ctxId + " > held by TuCSoN agent < " + agentId.toString() + " >");
-		node.removeAgent(agentId);
-		manager.shutdownContext(ctxId, agentId);
-		node.removeNodeAgent(this);
+        try {
+            this.dialog.sendMsgReply(reply);
+        } catch (final DialogException e) {
+            e.printStackTrace();
+        }
 
-	}
+    }
 
-	synchronized public void exit(){
-		exit = true;
-		notify();
-	}
+    /**
+     * 
+     */
+    @Override
+    public void run() {
 
-	/**
-	 * 
-	 */
-	public void operationCompleted(TupleCentreOperation op){
-		
-		Long reqId;
-		TucsonMsgRequest msg;
-		synchronized(requests){
-			reqId = opVsReq.remove(new Long(op.getId()));
-			msg = requests.remove(reqId);
-		}
-		
-		TucsonMsgReply reply = null;
-		
-		if(op.isInAll() || op.isRdAll() || op.isNoAll() || op.isOutAll()){
-			if(op.getTupleListResult()==null)
-				op.setTupleListResult(new LinkedList<Tuple>());
-			if(op.isResultSuccess())
-				reply = new TucsonMsgReply(msg.getId(), op.getType(), true, true, true, msg.getTuple(), (List<Tuple>) op.getTupleListResult());
-			else
-				reply = new TucsonMsgReply(msg.getId(), op.getType(), true, true, false, msg.getTuple(), (List<Tuple>) op.getTupleListResult());
-		}else{
-			if(op.isResultSuccess())
-				reply = new TucsonMsgReply(msg.getId(), op.getType(), true, true, true, msg.getTuple(), (LogicTuple) op.getTupleResult());
-			else
-				reply = new TucsonMsgReply(msg.getId(), op.getType(), true, true, false, msg.getTuple(), (LogicTuple) op.getTupleResult());
-		}
-		
-		try{
-			TucsonMsgReply.write(outStream, reply);
-			outStream.flush();
-		}catch(IOException ex){
-			System.err.println("[ACCProxyNodeSide]: " + ex);
-			ex.printStackTrace();
-		}
+        this.node.addAgent(this.agentId);
 
-	}
-	
+        TucsonMsgRequest msg;
+        TucsonMsgReply reply;
+        TucsonTupleCentreId tid;
+        final LogicTuple res = null;
+        List<LogicTuple> resList;
+
+        while (!this.ex) {
+
+            this.log("Listening to incoming TuCSoN agents/nodes requests...");
+
+            try {
+                msg = this.dialog.receiveMsgRequest();
+            } catch (final DialogException e) {
+                this.log("Agent " + this.agentId + " quit");
+                break;
+            }
+            final int msgType = msg.getType();
+
+            if (msgType == TucsonOperation.exitCode()) {
+                reply =
+                        new TucsonMsgReply(msg.getId(),
+                                TucsonOperation.exitCode(), true, true, true);
+                try {
+                    this.dialog.sendMsgReply(reply);
+                    break;
+                } catch (final DialogException e) {
+                    e.printStackTrace();
+                    break;
+                }
+            }
+
+            try {
+                tid = new TucsonTupleCentreId(msg.getTid());
+            } catch (final TucsonInvalidTupleCentreIdException e) {
+                e.printStackTrace();
+                break;
+            }
+
+            this.log("Serving TucsonOperation request < id=" + msg.getId()
+                    + ", type=" + msg.getType() + ", tuple=" + msg.getTuple()
+                    + " >...");
+
+            if (msgType == TucsonOperation.setSCode()) {
+                this.node.resolveCore(tid.getName());
+                this.node.addTCAgent(this.agentId, tid);
+                try {
+                    if (this.tcId == null) {
+                        resList =
+                                (List<LogicTuple>) TupleCentreContainer
+                                        .doBlockingSpecOperation(msgType,
+                                                this.agentId, tid,
+                                                msg.getTuple());
+                    } else {
+                        resList =
+                                (List<LogicTuple>) TupleCentreContainer
+                                        .doBlockingSpecOperation(msgType,
+                                                this.tcId, tid, msg.getTuple());
+                    }
+                } catch (final TucsonOperationNotPossibleException e) {
+                    e.printStackTrace();
+                    break;
+                } catch (final TucsonInvalidLogicTupleException e) {
+                    e.printStackTrace();
+                    break;
+                } catch (final TucsonInvalidSpecificationException e) {
+                    e.printStackTrace();
+                    break;
+                }
+
+                reply =
+                        new TucsonMsgReply(msg.getId(), msgType, true, true,
+                                true, msg.getTuple(), resList);
+
+                try {
+                    this.dialog.sendMsgReply(reply);
+                } catch (final DialogException e) {
+                    e.printStackTrace();
+                    break;
+                }
+
+            } else if (msgType == TucsonOperation.setCode()) {
+
+                this.node.resolveCore(tid.getName());
+                this.node.addTCAgent(this.agentId, tid);
+                try {
+                    if (this.tcId == null) {
+                        resList =
+                                (List<LogicTuple>) TupleCentreContainer
+                                        .doBlockingOperation(msgType,
+                                                this.agentId, tid,
+                                                msg.getTuple());
+                    } else {
+                        resList =
+                                (List<LogicTuple>) TupleCentreContainer
+                                        .doBlockingOperation(msgType,
+                                                this.tcId, tid, msg.getTuple());
+                    }
+                } catch (final TucsonOperationNotPossibleException e) {
+                    e.printStackTrace();
+                    break;
+                } catch (final TucsonInvalidLogicTupleException e) {
+                    e.printStackTrace();
+                    break;
+                }
+
+                reply =
+                        new TucsonMsgReply(msg.getId(), msgType, true, true,
+                                true, res, resList);
+
+                try {
+                    this.dialog.sendMsgReply(reply);
+                } catch (final DialogException e) {
+                    e.printStackTrace();
+                    break;
+                }
+
+            } else if (msgType == TucsonOperation.getCode()) {
+
+                this.node.resolveCore(tid.getName());
+                this.node.addTCAgent(this.agentId, tid);
+                try {
+                    if (this.tcId == null) {
+                        resList =
+                                (List<LogicTuple>) TupleCentreContainer
+                                        .doBlockingOperation(msgType,
+                                                this.agentId, tid, null);
+                    } else {
+                        resList =
+                                (List<LogicTuple>) TupleCentreContainer
+                                        .doBlockingOperation(msgType,
+                                                this.tcId, tid, null);
+                    }
+                } catch (final TucsonOperationNotPossibleException e) {
+                    e.printStackTrace();
+                    break;
+                } catch (final TucsonInvalidLogicTupleException e) {
+                    e.printStackTrace();
+                    break;
+                }
+
+                reply =
+                        new TucsonMsgReply(msg.getId(), msgType, true, true,
+                                true, null, resList);
+
+                try {
+                    this.dialog.sendMsgReply(reply);
+                } catch (final DialogException e) {
+                    e.printStackTrace();
+                    break;
+                }
+
+            } else if (msgType == TucsonOperation.getSCode()) {
+
+                this.node.resolveCore(tid.getName());
+                this.node.addTCAgent(this.agentId, tid);
+                try {
+                    if (this.tcId == null) {
+                        resList =
+                                (List<LogicTuple>) TupleCentreContainer
+                                        .doBlockingSpecOperation(msgType,
+                                                this.agentId, tid, null);
+                    } else {
+                        resList =
+                                (List<LogicTuple>) TupleCentreContainer
+                                        .doBlockingSpecOperation(msgType,
+                                                this.tcId, tid, null);
+                    }
+                    if (resList == null) {
+                        resList = new LinkedList<LogicTuple>();
+                    }
+                } catch (final TucsonOperationNotPossibleException e) {
+                    e.printStackTrace();
+                    break;
+                } catch (final TucsonInvalidSpecificationException e) {
+                    e.printStackTrace();
+                    break;
+                } catch (final TucsonInvalidLogicTupleException e) {
+                    e.printStackTrace();
+                    break;
+                }
+
+                reply =
+                        new TucsonMsgReply(msg.getId(), msgType, true, true,
+                                true, null, resList);
+
+                try {
+                    this.dialog.sendMsgReply(reply);
+                } catch (final DialogException e) {
+                    e.printStackTrace();
+                    break;
+                }
+
+            } else if ((msgType == TucsonOperation.noCode())
+                    || (msgType == TucsonOperation.nopCode())
+                    || (msgType == TucsonOperation.outCode())
+                    || (msgType == TucsonOperation.outAllCode())
+                    || (msgType == TucsonOperation.inCode())
+                    || (msgType == TucsonOperation.inpCode())
+                    || (msgType == TucsonOperation.rdCode())
+                    || (msgType == TucsonOperation.rdpCode())
+                    || (msgType == TucsonOperation.uinCode())
+                    || (msgType == TucsonOperation.uinpCode())
+                    || (msgType == TucsonOperation.urdCode())
+                    || (msgType == TucsonOperation.urdpCode())
+                    || (msgType == TucsonOperation.unoCode())
+                    || (msgType == TucsonOperation.unopCode())
+                    || (msgType == TucsonOperation.inAllCode())
+                    || (msgType == TucsonOperation.rdAllCode())
+                    || (msgType == TucsonOperation.noAllCode())
+                    || (msgType == TucsonOperation.spawnCode())) {
+
+                this.node.resolveCore(tid.getName());
+                this.node.addTCAgent(this.agentId, tid);
+                ITupleCentreOperation op;
+
+                synchronized (this.requests) {
+                    try {
+                        if (this.tcId == null) {
+                            op =
+                                    TupleCentreContainer
+                                            .doNonBlockingOperation(msgType,
+                                                    this.agentId, tid,
+                                                    msg.getTuple(), this);
+                        } else {
+                            op =
+                                    TupleCentreContainer
+                                            .doNonBlockingOperation(msgType,
+                                                    this.tcId, tid,
+                                                    msg.getTuple(), this);
+                        }
+                    } catch (final TucsonOperationNotPossibleException e) {
+                        e.printStackTrace();
+                        break;
+                    } catch (final TucsonInvalidLogicTupleException e) {
+                        e.printStackTrace();
+                        break;
+                    }
+                    this.requests.put(Long.valueOf(msg.getId()), msg);
+                    this.opVsReq.put(Long.valueOf(op.getId()),
+                            Long.valueOf(msg.getId()));
+                }
+
+            } else if ((msgType == TucsonOperation.noSCode())
+                    || (msgType == TucsonOperation.nopSCode())
+                    || (msgType == TucsonOperation.outSCode())
+                    || (msgType == TucsonOperation.inSCode())
+                    || (msgType == TucsonOperation.inpSCode())
+                    || (msgType == TucsonOperation.rdSCode())
+                    || (msgType == TucsonOperation.rdpSCode())) {
+
+                this.node.resolveCore(tid.getName());
+                this.node.addTCAgent(this.agentId, tid);
+                ITupleCentreOperation op;
+
+                synchronized (this.requests) {
+                    try {
+                        if (this.tcId == null) {
+                            op =
+                                    TupleCentreContainer
+                                            .doNonBlockingSpecOperation(
+                                                    msgType, this.agentId, tid,
+                                                    msg.getTuple(), this);
+                        } else {
+                            op =
+                                    TupleCentreContainer
+                                            .doNonBlockingSpecOperation(
+                                                    msgType, this.tcId, tid,
+                                                    msg.getTuple(), this);
+                        }
+                    } catch (final TucsonOperationNotPossibleException e) {
+                        e.printStackTrace();
+                        break;
+                    } catch (final TucsonInvalidLogicTupleException e) {
+                        e.printStackTrace();
+                        break;
+                    }
+                    this.requests.put(Long.valueOf(msg.getId()), msg);
+                    this.opVsReq.put(Long.valueOf(op.getId()),
+                            Long.valueOf(msg.getId()));
+                }
+
+            } else if ((msgType == TucsonOperation.getEnvCode())
+                    || (msgType == TucsonOperation.setEnvCode())) {
+
+                this.node.resolveCore(tid.getName());
+                this.node.addTCAgent(this.agentId, tid);
+
+                ITupleCentreOperation op = null;
+                synchronized (this.requests) {
+                    try {
+                        if (this.tcId == null) {
+                            op =
+                                    TupleCentreContainer
+                                            .doEnvironmentalOperation(msgType,
+                                                    this.agentId, tid,
+                                                    msg.getTuple(), this);
+                        } else {
+                            op =
+                                    TupleCentreContainer
+                                            .doEnvironmentalOperation(msgType,
+                                                    this.tcId, tid,
+                                                    msg.getTuple(), this);
+                        }
+                    } catch (final Exception e) {
+                        System.err.println("[ACCProxyNodeSide]: " + e);
+                        e.printStackTrace();
+                        break;
+                    }
+                }
+                this.requests.put(new Long(msg.getId()), msg);
+                this.opVsReq.put(new Long(op.getId()), new Long(msg.getId()));
+            }
+
+        }
+
+        try {
+            this.dialog.end();
+        } catch (final DialogException e) {
+            e.printStackTrace();
+        }
+
+        this.log("Releasing ACC < " + this.ctxId + " > held by TuCSoN agent < "
+                + this.agentId.toString() + " >");
+        this.node.removeAgent(this.agentId);
+        this.manager.shutdownContext(this.ctxId, this.agentId);
+        this.node.removeNodeAgent(this);
+
+    }
+
+    private void log(final String st) {
+        System.out.println("[ACCProxyNodeSide (" + this.node.getTCPPort()
+                + ", " + this.ctxId + ")]: " + st);
+    }
+
 }
